# AWSS3

./: README.md  main.py  pyproject.toml
src/awss3/: __init__.py  core.py
