[project]
name = "awss3"
version = "0.1.0"
description = ""
authors = [
    {name = "Giorgi Zedginidze",email = "giorgi.zedginidze.3@btu.edu.ge"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "awss3", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
